--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^6.4.1",
     "prompt-confirm": "^1.2.0",
     "request": "^2.85.0",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "util": "^0.11.0"
   }
 }
