--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 LINE_LOGIN_CHANNEL_ID=1621064513
 LINE_LOGIN_CHANNEL_SECRET=7deaad758062907f28335edf3c71eec7
-LINE_LOGIN_CALLBACK_URL=http://35.201.225.0:5000/form1
+LINE_LOGIN_CALLBACK_URL=http://35.201.225.0:5000/callback
