--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "author": "",
   "license": "ISC",
@@ -20,12 +19,16 @@
     "express-session": "^1.15.6",
     "forever": "^0.15.3",
     "formidable": "^1.2.1",
+    "get-json": "^1.0.1",
     "jquery": "^3.3.1",
+    "jssha": "^2.3.1",
     "line-login": "^1.0.14",
+    "linebot": "^1.4.1",
     "mongodb": "^3.0.1",
     "morgan": "^1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "node-datetime": "^2.1.2",
     "nodemon": "^1.18.9"
   }
 }
